k8s/authorization-policy-jwt.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "RequestAuthentication"
metadata:
  name: "jwt-example"
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  jwtRules:
  - issuer: "https://itproject41.us.auth0.com/"
    jwksUri: "https://itproject41.us.auth0.com/.well-known/jwks.json"
    forwardOriginalToken: true
