k8s/deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: catalog-config-service
  labels:
    app: catalog-config-service
spec:
  ports:
    - name: http
      port: 8000
  selector:
    app: catalog-config-service
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: catalog-config-service
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: catalog-config-service
        version: v1
    spec:
      containers:
        - name: catalog-config-service
          image: registry.gitlab.com/itproject41/catalog-config-service
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
