k8s/10-istio-virtual-service-config.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: catalog-config-vs
  namespace: default
spec:
  hosts:
  - "new.ittalent41.com"
  gateways:
  - auth0-demo-gateway
  http:
  - match:
    - uri:
        prefix: /catalog-service
    route:
    - destination:
        host: evolt-service-config-catalog-service
        port:
          number: 8081
  - match:
    - uri:
        prefix: /solicitud-service
    route:
    - destination:
        host: evolt-service-solicitud-service
        port:
          number: 8082
